src/objects/Program_Support_Item__c.object
<CustomObject>
    <description>Allows for Support Items to be linked to Funding Programs for the purpose of tallying appropriate delivered services</description>
    <label>Program Support Item</label>
    <nameField>
        <displayFormat>FPP - {00000}</displayFormat>
        <label>Program Support Item ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Program Support Item</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <fields>
        <fullName>Funding_Program__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Funding Program</label>
        <referenceTo>Funding_Program__c</referenceTo>
        <relationshipLabel>Program Support Items</relationshipLabel>
        <relationshipName>Program_Support_Items</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Funding_Program_Priority__c</fullName>
        <formula>Funding_Program__r.Priority__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Funding Program Priority</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>maica_cc__Support_Item__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Support Item</label>
        <referenceTo>maica_cc__Support_Item__c</referenceTo>
        <relationshipLabel>Funding Programs</relationshipLabel>
        <relationshipName>Program_Support_Items</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>